<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:background="@drawable/borders"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borders"
        android:id="@+id/webpage_layout"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/globe_icon"
            android:padding="10dp"
            android:id="@+id/webpage_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_website"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/light_black"
            android:id="@+id/webpage_text"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borders"
        android:id="@+id/email_layout"
        android:layout_below="@+id/webpage_layout"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/at_sign"
            android:padding="10dp"
            android:id="@+id/at_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:id="@+id/email_text"
            android:textColor="@color/light_black"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borders"
        android:layout_below="@+id/email_layout"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/birthday_cake"
            android:padding="10dp"
            android:id="@+id/bithday_icon"
            />
        <TextView
            android:id="@+id/birthday_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_date"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/light_black"
            />
    </RelativeLayout>
</RelativeLayout>