<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/custom_toolbar"/>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:orientation="vertical"
                >
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    android:background="@drawable/borders"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:background="@drawable/borders"
                        >
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="106dp"
                            android:layout_height="106dp"
                            android:id="@+id/profile_image"
                            android:src="@drawable/lori"
                            android:layout_gravity="center"
                            android:layout_marginTop="30dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/based_in"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/gray"
                            android:id="@+id/textView"
                            android:layout_gravity="center"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textColor="@color/orange"
                            android:layout_gravity="center_horizontal"
                            android:paddingBottom="12dp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_columnWeight="1"
                        android:layout_width="0dp"
                        android:layout_height="191dp"
                        android:orientation="vertical"
                        android:layout_columnSpan="1"
                        android:background="@drawable/borders"
                        >
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="106dp"
                            android:layout_height="106dp"
                            android:id="@+id/company_image"
                            android:src="@drawable/thearktech"
                            android:layout_gravity="center"
                            android:layout_marginTop="30dp"
                            />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/position"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/gray"
                                android:id="@+id/position"

                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/company_name"
                                android:textColor="@color/orange"
                                android:layout_marginTop="22dp"
                                android:layout_marginLeft="45dp"
                                android:layout_marginStart="45dp"
                                android:paddingBottom="9dp"
                                />
                        </RelativeLayout>
                    </LinearLayout>
                </GridLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="4"
                    android:orientation="horizontal"

                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/white_phone_icon"
                        android:background="@drawable/borders"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:padding="10dp"
                        />
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/message_bubble"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:padding="10dp"
                        android:background="@drawable/borders"
                        />
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/white_globe"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:padding="10dp"
                        android:background="@drawable/borders"
                        />
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/more_dots"
                        android:layout_columnSpan="1"
                        android:layout_columnWeight="1"
                        android:padding="10dp"
                        android:background="@drawable/borders"
                        />
                </GridLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginBottom="40dp"
                >
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/list_of_infromation"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"

                    >
                </ListView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
