<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">
    <include layout="@layout/custom_toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="vertical"
        >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:background="@drawable/borders"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:id="@+id/profile_image"
                    android:src="@drawable/lori"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/based_in"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/gray"
                    android:id="@+id/textView"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/orange"
                    android:layout_gravity="center_horizontal"
                  />
            </LinearLayout>

            <LinearLayout
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_columnSpan="1"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:id="@+id/company_image"
                    android:src="@drawable/thearktech"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/position"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/gray"
                        android:id="@+id/position"
                        android:layout_centerInParent="true"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company_name"
                        android:textColor="@color/orange"
                        android:layout_marginTop="19dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginStart="40dp"
                        />
                </RelativeLayout>


            </LinearLayout>



        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:orientation="horizontal"

            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/white_phone_icon"
                android:background="@drawable/borders"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:padding="10dp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/message_bubble"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:padding="10dp"
                android:background="@drawable/borders"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/white_globe"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:padding="10dp"
                android:background="@drawable/borders"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@mipmap/more_dots"
                android:layout_columnSpan="1"
                android:layout_columnWeight="1"
                android:padding="10dp"
                android:background="@drawable/borders"
                />
        </GridLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <!--TODO:pune lista-->
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_of_infromation"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </ListView>

        <!--
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borders"
            android:id="@+id/webpage_layout"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/globe_icon"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_website"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borders"
            android:id="@+id/email_layout"
            android:layout_below="@+id/webpage_layout"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/at_sign"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borders"
            android:layout_below="@+id/email_layout"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/birthday_cake"
                android:padding="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_date"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/light_black"
                />
        </RelativeLayout>

    -->
    </RelativeLayout>


</LinearLayout>